--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     </string-array>
 
     <string-array name="class_of_student">
+        <item>Class/Courses</item>
         <item>Class 1</item>
         <item>class 2</item>
         <item>class 3</item>
@@ -34,11 +35,19 @@
     </string-array>
 
     <string-array name="preferred_medium">
+        <item>Category</item>
         <item>English Medium</item>
         <item>Bangla Medium</item>
+        <item>English Version</item>
+        <item>IT</item>
+        <item>Test Preparation</item>
+        <item>Language Learning</item>
+        <item>University Admission Test</item>
+        <item>Arts</item>
     </string-array>
 
     <string-array name="days_in_a_week">
+        <item>Num of Days</item>
         <item>1 Day</item>
         <item>2 Days</item>
         <item>3 Days</item>
@@ -49,6 +58,7 @@
     </string-array>
 
     <string-array name="preferred_teacher_gender">
+        <item>Tutor Gender</item>
         <item>Any</item>
         <item>Male</item>
         <item>Female</item>
