teacher tab layout content populated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,8 @@
 
     <string name="dash_board_app_bar_items">Settings</string>
     <string name="LogOut_Button">Log Out</string>
-    <string name="news">Feed</string>
-    <string name="trending">Trending</string>
-    <string name="profile">Profile</string>
-    <string name="usertype">User Type</string>
+    <string name="eduInfo">Education</string>
+    <string name="personalInfo">Personal</string>
 
     <string-array name="account_type_spinner">
         <item>Student/Guardian</item>
