--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,9 +12,10 @@
     <string name="eduInfo">Education</string>
     <string name="personalInfo">Personal</string>
 
-    <string-array name="account_type_spinner">
-        <item>Student/Guardian</item>
-        <item>Teacher</item>
+    <string-array name="gender_type">
+        <item>Gender</item>
+        <item>Male</item>
+        <item>Female</item>
     </string-array>
 
     <string-array name="class_of_student">
