UX and UI updates

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">EasyTution</string>
+    <string name="app_name">TUTOR CENTER</string>
     <string name="signupPage">Signup</string>
 
     <string name="title_activity_news_feed">TuitionFeed</string>
