--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="usertype">User Type</string>
     <string name="eduInfo">Education</string>
     <string name="personalInfo">Personal</string>
+    <string name="latest_tuition">News Feed</string>
+    <string name="student_post_btn">POST</string>
 
     <string-array name="gender_type">
         <item>Male</item>
