profile pic and id card fetched from DB and select gender added in signup activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="student_post_btn">POST</string>
 
     <string-array name="gender_type">
+        <item>Select Gender</item>
         <item>Male</item>
         <item>Female</item>
     </string-array>
